ft(167821533) Creates users can view mentors interace - adds image assets with mentor profile images - adds a mentors.html file - adds a mentors.js script [finishes #167821533]

--- a/UI/index.html
+++ b/UI/index.html
@@ -66,5 +66,6 @@
                 </div>
         </section>
     </div>
+    <a href="./mentors.html">Click to view mentors.html</a>
 </body>
 </html>
