ft(167886125) Creates mentor can accept a mentorsip session request ui - adds sessions.html - adds sessions.js script - fixes indentation in mentor.html - fixes indentation in showMentor.html [finishes #167886125]

--- a/UI/mentors.html
+++ b/UI/mentors.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <a href="#">Become a Mentor</a>
-        <a href="#">Sessions</a>
+        <a href="./sessions.html">Sessions</a>
         <a href="#"> Profile</a>
         <a href="#">Log Out</a>
     </div>
@@ -32,7 +32,7 @@
         <nav class="large">
             <ul>
                 <li><a href="#">Become a Mentor</a></li>
-                <li><a href="#">Sessions</a></li>
+                <li><a href="./sessions.html">Sessions</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Log Out</a></li>
             </ul>
@@ -73,8 +73,7 @@
             <a href="https://www.facebook.com/thisisandela/" target="_blank"><img src="./assets/f_logo.png" height="29" width="29" alt=""></a>
             <a href="https://www.youtube.com/channel/UCZF611UlHooDL1rxXs-Ak1g" target="_blank"><img src="./assets/youtube.png" height="29" width="29" alt=""></a>
         </div>
-    </div>
-     </div>
+        </div>
         <span class="copyright-line">&copy;2019 jacquelinebinya@gmail.com</span>
     </footer>
 </body>
