ft(167921264) Creates user can sign up ui - modifies index.html - modifies styles.css - adds signUp.html [finishes #167921264]

--- a/UI/index.html
+++ b/UI/index.html
@@ -22,7 +22,7 @@
         </div>
                     
         <a href="#">Sign In</a>
-        <a href="#">Sign Up</a>
+        <a href="signUp.html">Sign Up</a>
     </div>
     <header>
         <a href="index.html" class="logo">Free Mentors</a>
@@ -32,7 +32,7 @@
         <nav class="large">
             <ul>
                 <li><a href="#">Sign In</a></li>
-                <li><a href="#">Sign Up</a></li>
+                <li><a href="signUp.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
@@ -60,7 +60,7 @@
                 
                 <p class="headline-text">Free mentors gives you accelerated learning and continous support as you achieve your career goals.</p>
                 <div class="inner">
-                    <a href="#" class="btn-start">Get Started</a>
+                    <a href="signUp.html" class="btn-start">Get Started</a>
                     <span class="link-headline">Already using Free Mentors?</span>    
                     <a class="link" href="#">Sign in.</a>
                 </div>
