--- a/UI/index.html
+++ b/UI/index.html
@@ -31,7 +31,7 @@
         </nav>
         <nav class="large">
             <ul>
-                <li><a href="#">Sign In</a></li>
+                <li><a href="signIn.html">Sign In</a></li>
                 <li><a href="signUp.html">Sign Up</a></li>
             </ul>
         </nav>
@@ -62,7 +62,7 @@
                 <div class="inner">
                     <a href="signUp.html" class="btn-start">Get Started</a>
                     <span class="link-headline">Already using Free Mentors?</span>    
-                    <a class="link" href="#">Sign in.</a>
+                    <a class="link" href="signIn.html">Sign in.</a>
                 </div>
         </section>
     </div>
