--- a/UI/signUp.html
+++ b/UI/signUp.html
@@ -46,7 +46,7 @@
             </div>
             <button class="btn-start">Post</button>
             <span class="ad-headliner">Already using Free Mentors?</span>    
-            <a class="ad-extenalLink" href="#">Sign in.</a>
+            <a class="ad-extenalLink" href="signIn.html">Sign in.</a>
         </form>
     </div> 
 </body>
