--- a/UI/mentors.html
+++ b/UI/mentors.html
@@ -25,7 +25,7 @@
         <a href="#">Log Out</a>
     </div>
     <header>
-        <a href="index.html" class="logo">Free Mentors</a>
+        <a href="mentors.html" class="logo">Free Mentors</a>
         <nav class="small">
             <button class="open-btn"><i class="fas fa-bars"></i></button>
         </nav>
@@ -42,7 +42,7 @@
       <div class="cards"></div>
     </main>
     <footer>
-        <a href="index.html" class="logo">Free Mentors</a>
+        <a href="mentors.html" class="logo">Free Mentors</a>
         <div class="master">
         <div class="resources"> 
             <div class="references-1">
