--- a/UI/signIn.html
+++ b/UI/signIn.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Sign In</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="signUp.js" async></script>
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
             <div>
                 <input type="password" placeholder="Password" required>
             </div>
-            <button class="btn-start">Post</button>
+            <button class="btn-start signUp-btn">Post</button>
             <span class="ad-headliner">Don't have a Free Mentors account?</span>    
             <a class="ad-extenalLink" href="signUp.html">Sign up.</a>
         </div>
