bg(167937111) Redirects user to landing page after sign out - modifies showMentor.html - modifies requestSession.html - modifies sessions.html [finishes #167937111]

--- a/UI/mentors.html
+++ b/UI/mentors.html
@@ -34,7 +34,7 @@
                 <li><a href="#">Become a Mentor</a></li>
                 <li><a href="./sessions.html">Sessions</a></li>
                 <li><a href="#">Profile</a></li>
-                <li><a href="#">Log Out</a></li>
+                <li><a href="index.html">Log Out</a></li>
             </ul>
         </nav>
     </header>
