--- a/UI/showMentor.html
+++ b/UI/showMentor.html
@@ -12,7 +12,7 @@
 <body>
     <header>
             <a href="mentors.html" class="logo">Free Mentors</a>
-            <a href="#">Log Out</a>
+            <a href="index.html">Log Out</a>
     </header>    
     <div class="container container-secondary">
         <div class="info">
