--- a/UI/requestSession.html
+++ b/UI/requestSession.html
@@ -10,7 +10,7 @@
 <body>
     <header>
             <a href="mentors.html" class="logo">Free Mentors</a>
-            <a href="#">Log Out</a>
+            <a href="index.html">Log Out</a>
     </header>
     <div class="container">
         <h2 class="session-title">Session Request</h2>
