ft(167921248) Creates admin can change a user to a mentor -modifies mentors.html - adds becomeMentor.html [finishes #167921248]

--- a/UI/mentors.html
+++ b/UI/mentors.html
@@ -19,7 +19,7 @@
                 <button class="close-btn">&times;</button>
             </div>
         </div>
-        <a href="#">Become a Mentor</a>
+        <a href="becomeMentor.html">Become a Mentor</a>
         <a href="./sessions.html">Sessions</a>
         <a href="#"> Profile</a>
         <a href="#">Log Out</a>
@@ -31,7 +31,7 @@
         </nav>
         <nav class="large">
             <ul>
-                <li><a href="#">Become a Mentor</a></li>
+                <li><a href="becomeMentor.html">Become a Mentor</a></li>
                 <li><a href="./sessions.html">Sessions</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="index.html">Log Out</a></li>
