bg(167941465) Fixes user can request a mentorship session with a mentor ui - modifies requestSession.html - modifies styles.css [finishes #167941465]

--- a/UI/requestSession.html
+++ b/UI/requestSession.html
@@ -21,15 +21,13 @@
             </div>
             <h3>Type your questions in the fields below:</h3>
             <div>
-                <span>1.</span><input type="text" name="question1"  required>
+                    <textarea name="question1"  maxlength="200"  rows="5" placeholder="Type a question here..." required></textarea>
             </div>
             <div>
-                <span>2.</span>
-                <input type="text" name="question2">
+                    <textarea name="question2"  maxlength="200"  rows="5" placeholder="Type a question here..." ></textarea>
             </div>
             <div>
-                <span>3.</span>
-                <input type="text" name="question3">
+                    <textarea name="question3"  maxlength="200"  rows="5" placeholder="Type a question here..." ></textarea>
             </div>
             <div class="btn-container">
                 <button class="btn post">Post</button>
